@@ -1,0 +1,6 @@
+include $(top_srcdir)/build-aux/init.mk
+
+lib_LTLIBRARIES = liboptimization-dummy.la
+
+liboptimization_dummy_la_SOURCES = dummy.cc
+liboptimization_dummy_la_LDFLAGS = -module
